--- a/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/GiRaFFE_standalone_Ccodes/Tutorial-Unit_Test-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll write this in C because the codes we want to test are already written that way, and we would like to avoid modifying the files as much as possible. To do so, we will write the C code as a string literal, and then print it to a file. We will begin by including our new files. "
+    "We'll write this in C because the codes we want to test are already written that way, and we would like to avoid modifying the files as much as possible. To do so, we will write the C code as a string literal, and then print it to a file. We will begin by including core functionality. We will also define standard parameters needed for GRFFE and NRPy+."
    ]
   },
   {
@@ -40,7 +40,7 @@
     "#include <time.h>   // Needed to set a random seed.\n",
     "\n",
     "// Standard GRFFE parameters:\n",
-    "const double GAMMA_SPEED_LIMIT = 2000.0;\n",
+    "const double GAMMA_SPEED_LIMIT = 10.0;\n",
     "const int Nxx_plus_2NGHOSTS[3] = {1,1,1};\n",
     "\n",
     "// Standard NRPy+ memory access:\n",
@@ -50,6 +50,23 @@
     "// Assuming idx = IDX3(i,j,k). Much faster if idx can be reused over and over:\n",
     "#define IDX4pt(g,idx)   ( (idx) + (Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2]) * (g) )\n",
     "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we'll manually write the gridfunction `#define`s that NRPy+ needs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_string += \"\"\"\n",
     "// Let's also #define the NRPy+ gridfunctions\n",
     "#define ALPHA_FACEGF 0\n",
     "#define GAMMADET_FACEGF 1\n",
@@ -84,6 +101,23 @@
     "#define STILDE_FLUXD2GF 30\n",
     "#define NUM_AUXEVOL_GFS 31\n",
     "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The last things NRPy+ will require are the definition of type `REAL` and, of course, the functions we are testing. These files should be generated on the fly, but we'll not do that until there are far fewer changes to be made in the notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_string += \"\"\"\n",
     "// The NRPy+ versions of the function. These should require relatively little modification.\n",
     "// We will need this define, though:\n",
     "#define REAL double\n",
@@ -98,12 +132,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we'll include the file from the old `GiRaFFE`. But before we can do so, we should define modified versions of the CCTK macros."
+    "Next, we'll include the files from the old `GiRaFFE`. But before we can do so, we should define modified versions of the CCTK macros."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,12 +154,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll also need to download the file in question from the `GiRaFFE` bitbucket repository. This code was originally written by Leo Werneck in the IllinoisGRMHD documentation, modified to download the files we want."
+    "We'll also need to download the files in question from the `GiRaFFE` bitbucket repository. This code was originally written by Leo Werneck in the IllinoisGRMHD documentation; we have modified it to download the files we want. Of note is the addition of the `for` loop since we need three files (The function `GRFFE__S_i__flux()` depends on two other files for headers and functions)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,19 +328,19 @@
     "    const double betaz = auxevol_gfs[IDX4(BETA_FACEU2GF, i0,i1,i2)];\n",
     "    FACEVAL[SHIFTZ] = betaz;\n",
     "    \n",
-    "    auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
+    "    /*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)]-betax;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)]-betay;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
-    "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;\n",
-    "    /* Near-luminal */\n",
-    "    /*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
-    "    Ur[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)]-betax;\n",
-    "    auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
-    "    Ur[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)]-betay;\n",
-    "    auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
     "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;*/\n",
+    "    /* Near-luminal */\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
+    "    Ur[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU0GF, i0,i1,i2)]-betax;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
+    "    Ur[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU1GF, i0,i1,i2)]-betay;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
+    "    Ur[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_RU2GF, i0,i1,i2)]-betaz;\n",
     "    \n",
     "    auxevol_gfs[IDX4(B_RU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[BX_CENTER] = auxevol_gfs[IDX4(B_RU0GF, i0,i1,i2)];\n",
@@ -315,19 +349,19 @@
     "    auxevol_gfs[IDX4(B_RU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ur[BZ_CENTER] = auxevol_gfs[IDX4(B_RU2GF, i0,i1,i2)];\n",
     "    \n",
-    "    auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
+    "    /*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ul[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)]-betax;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ul[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)]-betay;\n",
     "    auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
-    "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;\n",
-    "    /* Near-luminal */\n",
-    "    /*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
-    "    Ul[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)]-betax;\n",
-    "    auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
-    "    Ul[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)]-betay;\n",
-    "    auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*0.2;\n",
     "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;*/\n",
+    "    /* Near-luminal */\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
+    "    Ul[VX] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU0GF, i0,i1,i2)]-betax;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
+    "    Ul[VY] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU1GF, i0,i1,i2)]-betay;\n",
+    "    auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
+    "    Ul[VZ] = alpha*auxevol_gfs[IDX4(VALENCIAV_LU2GF, i0,i1,i2)]-betaz;\n",
     "    \n",
     "    auxevol_gfs[IDX4(B_LU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    Ul[BX_CENTER] = auxevol_gfs[IDX4(B_LU0GF, i0,i1,i2)];\n",
@@ -365,19 +399,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we'll add a second unit test with which to confirm our rewrite of the algorithm by which we speed-limit the velocities and calculate $u^0$. First, we'll "
+    "Finally, we will write out the string that we have build as a C file. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,8 +416,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And now, we will compile and run the C code. We also make python calls to time how long each of these steps takes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -403,27 +437,27 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
-      "Finished executing in 0.415985107422 seconds.\n",
+      "Finished executing in 0.415111064911 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.424285173416 seconds.\n",
+      "Finished in 0.424943208694 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
       "seed = 1570632212\n",
-      "NRPy+ speeds: -4.5206e-02, 2.5774e-01, -2.7043e-01, 2.7142e-01, 4.3459e-01, -7.1679e-01\n",
-      "ETK   speeds: -5.7444e-01, 6.6100e-01, -3.3515e-01, -3.0841e-01, 8.0959e-01, -7.1018e-01\n",
+      "NRPy+ speeds: 5.2966e+00, 6.6598e+00, 4.2831e+00, 6.7214e+00, 7.4557e+00, 2.2744e+00\n",
+      "ETK   speeds: 3.9137e+00, 6.0400e+00, 3.4906e+00, 5.1108e+00, 6.7086e+00, 1.8030e+00\n",
       "\n",
-      "NRPy+ Results: 4.4742019466681014e-02, -1.5102730832110878e-02, 9.9827212204463729e-03\n",
-      "ETK   Results: 4.4742019466681007e-02, -1.5102730832110872e-02, 9.9827212204463694e-03\n",
+      "NRPy+ Results: 3.1564839773270723e-02, 1.6535228583654242e-03, 2.8679105226593151e-03\n",
+      "ETK   Results: 3.1564839773723596e-02, 1.6535228588904858e-03, 2.8679105227932059e-03\n",
       "\n",
-      "NRPy+ Results: 2.2170737273725816e-02, 2.7915561596633408e-02, -7.0198826602302630e-02\n",
-      "ETK   Results: 2.2170737273725830e-02, 2.7915561596633422e-02, -7.0198826602302672e-02\n",
+      "NRPy+ Results: 4.2071891842984481e-02, 2.1162206370742868e-03, -1.7540985696470991e-02\n",
+      "ETK   Results: 4.2071891844866184e-02, 2.1162206392760521e-03, -1.7540985695910203e-02\n",
       "\n",
-      "NRPy+ Results: 2.9446391202536800e-03, -4.3706215207438184e-02, 2.0484517285635474e-02\n",
-      "ETK   Results: 2.9446391202536870e-03, -4.3706215207438212e-02, 2.0484517285635488e-02\n",
+      "NRPy+ Results: -1.0092747989448396e-02, -2.6961744486436307e-02, 1.3459561640998659e-02\n",
+      "ETK   Results: -1.0092747988731540e-02, -2.6961744485606436e-02, 1.3459561641190391e-02\n",
       "\n",
-      "Finished in 0.0188729763031 seconds.\n",
+      "Finished in 0.0168929100037 seconds.\n",
       "\n",
       "\n"
      ]
