--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -16,9 +16,9 @@
     "# The Riemann Solution on $\\tilde{S}_i$ using HLLE\n",
     "### Author: Patrick Nelson\n",
     "\n",
-    "This notebook documents the function from the original `GiRaFFE` that calculates the flux for $\\tilde{S}_i$ according to the the method of Harten, Lax, von Leer, and Einfeldt (HLLE), assuming that we have calculated the values of the flux on the cell faces according to the piecewise-parabolic method (PPM) of [Colella and Woodward (1984)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf), modified for the case of GRFFE. \n",
+    "This notebook documents the function from the original `GiRaFFE` that calculates the flux for $\\tilde{S}_i$ according to the the method of Harten, Lax, von Leer, and Einfeldt (HLLE), assuming that we have calculated the values of the velocity and magnetic field on the cell faces according to the piecewise-parabolic method (PPM) of [Colella and Woodward (1984)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf), modified for the case of GRFFE. \n",
     "\n",
-    "**Module Status:** <font color=red><b> In-Progress </b></font>\n",
+    "**Module Status:** <font color=orange><b> Passing most unit tests </b></font>\n",
     "\n",
     "**Validation Notes:** Everything should be written at this point, but we need to finish the rest of the algorithm before we can validate this.\n",
     "\n",
@@ -28,9 +28,9 @@
     "$$\n",
     "\\boxed{\\partial_t \\tilde{S}_i + \\underbrace{ \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right)}_{\\rm Flux\\ term} = \\underbrace{\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}}_{\\rm Source\\ term}.}\n",
     "$$\n",
-    "We can then see that, if we rewrite this, the right-hand side (RHS) describing the time evolution $\\partial_t \\tilde{S}_i$ consists of two terms:\n",
+    "We can then see that, if we rewrite this, the right-hand side (RHS) describing the time evolution $\\partial_t \\tilde{S}_i$ consists of two terms: the flux term and the source term. The flux term in particular can be tricky, as it may be discontinuous due to shocks or other sharp features. This presents difficulties when we take finite-difference derivatives of that term, leading to the Gibbs phenomenon. So, we implement a different algorithm to take the derivative. \n",
     "\n",
-    "It is the flux term that concerns us here; the following functions will compute the value inside the parentheses so that we can easily take its derivative later. Having reconstructed the values of $v^i_{(n)}$ and $B^i$ on the cell faces, we will now compute the value of the flux of $\\tilde{S}_i$ on each face. For each component of $\\tilde{S}_i$ in each direction, we compute the flux as\n",
+    "It is the flux term itself that concerns us here; the following functions will compute the value inside the parentheses so that we can easily take its derivative later. Having reconstructed the values of $v^i_{(n)}$ and $B^i$ on the cell faces, we will now compute the value of the flux of $\\tilde{S}_i$ on each face. For each component of $\\tilde{S}_i$ in each direction, we compute the flux as\n",
     "$$\n",
     "{\\rm st\\_j\\_flux} = \\frac{c_{\\rm min} f_{\\rm R} + c_{\\rm max} f_{\\rm L} - c_{\\rm min} c_{\\rm max} ({\\rm st\\_j\\_r}-{\\rm st\\_j\\_l})}{c_{\\rm min} + c_{\\rm max}},\n",
     "$$\n",
@@ -42,13 +42,14 @@
     "$$\n",
     "{\\rm st\\_j} = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2) u^0 u_i - b^t b_i \\right).\n",
     "$$\n",
-    "Note that these two quantities are computed on both the left and right sides of the cell face. We will be able to draw heavily on the module [Tutorial-u0_smallb_Poynting-Cartesian.ipynb](Tutorial-u0_smallb_Poynting-Cartesian.ipynb) to compute $u^0$, $u^i$, and $b^\\mu$, as well as the index-lowered forms of those vectors.\n",
+    "Here, $i$ is direction in which we are computing the flux, and $j$ is the component of the momentum we are computing it for. Note that these two quantities are computed on both the left and right sides of the cell face. We will be able to draw heavily on the module [Tutorial-u0_smallb_Poynting-Cartesian.ipynb](Tutorial-u0_smallb_Poynting-Cartesian.ipynb) to compute $u^0$, $u^i$, and $b^\\mu$, as well as the index-lowered forms of those vectors. Critically, these quantities depend on the Valencia 3-velocity $v^i_{(n)}$ and magnetic field $B^i$. We will not be using the normal gridfunctions for these, but rather the ones that we have previosly calculated on the left and right sides of the cell faces using the [Piecewise Parabolic Method](Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb).\n",
     "\n",
     "The speeds $c_\\min$ and $c_\\max$ are characteristic speeds that waves can travel through the plasma. In GRFFE, the expressions defining them reduce a function of only the metric quantities. $c_\\min$ is the negative of the minimum amongst the speeds $c_-$ and $0$ and $c_\\max$ is the maximum amongst the speeds $c_+$ and $0$. The speeds $c_\\pm = \\sqrt{b^2-4ac}$ must be calculated on both the left and right faces, where \n",
     "$$a = 1/\\alpha^2,$$ \n",
     "$$b = 2 \\beta^i / \\alpha^2$$\n",
     "and $$c = g^{ii} - (\\beta^i)^2/\\alpha^2.$$\n",
     "\n",
+    "Another point to consider is that since we are working on cell faces, not at the cell center, we can't use the normal metric values that we store. We will instead use the value of the metric interpolated onto the cell face, which in this tutorial, we will assume has been previously done. \n",
     "\n",
     "The algorithm for finite-volume methods in general is as follows: \n",
     "\n",
@@ -178,7 +179,7 @@
     "## Step 2.a: The function declaration: inputs, outputs, and macros \\[Back to [top](#toc)\\]\n",
     "$$\\label{define}$$\n",
     "\n",
-    "First, we give the function definition. This function will take as parameters the integers `i0`, `i1`, and `i2`; these indicate a point on the grid. The function also needs the parameter `flux_dirn` to know which direction to compute the flux in, the array of gridfunctions (which we use for the interolated face values (see [the previous tutorial](Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb) and the fluxes, here), the interpolated quantities on the cell interfaces `FACEVAL` and `FACEVAL_LAPSE_PSI4`, and the speeds `cmax` and `cmin`. We also calculate quantities related to the conformal factor $\\psi$ (including the square root of the determinant of the metric $\\sqrt{\\gamma}$) and the lapse $\\alpha$; these lines will need to be modified to use the values actually stored by our `GiRaFFE`. "
+    "First, we give the function definition. This function will take as parameters the integers `i0`, `i1`, and `i2`; these indicate a point on the grid. The function also needs the array of gridfunctions (which we use here for the reconstructed face values (see [the previous tutorial](Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb) and the interpolated metric quantities on the cell interfaces). We also calculate quantities related to the conformal factor $\\psi$ (including the square root of the determinant of the metric $\\sqrt{\\gamma}$) and the lapse $\\alpha$; these lines will be handled in Python so the NRPy+ can optimize them. "
    ]
   },
   {
@@ -239,7 +240,7 @@
     "## Step 2.b: Speed-limit the velocities \\[Back to [top](#toc)\\]\n",
     "$$\\label{speed_limit}$$\n",
     "\n",
-    "Next, we compute the speed-limited velocities on the faces. This function is found in `inlined_functions.C`, however, we will replace it with our own that does the same thing (and is already compatible with the rest of our code). The original function also counts how often the speed had to be limited."
+    "Next, we compute the speed-limited velocities on the faces. This function is found in `inlined_functions.C`, however, we will replace it with our own that does the same thing (and is already compatible with the rest of our code). The original function also counts how often the speed had to be limited. We also introduce a variation of the previous speed limiter that allows the process to be incorporated directly into the final expressions that we will pass to `FD_outputC()`."
    ]
   },
   {
@@ -414,6 +415,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conveniently enough, the NRPy+ code that does this has already been written, and is found in `u0_smallb_Poynting__Cartesian.py`, which is documented [here](Tutorial-u0_smallb_Poynting-Cartesian.ipynb). We will call the function at least twice, once each for left and right side of the face. If we use the old version of the speed-limiting algorithm, we will need to call it a third time so that we generate a more generic version of `computeu0_Cfunction.h`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -477,7 +485,7 @@
     "## Step 2.d: GRFFE characteristic wave speeds \\[Back to [top](#toc)\\]\n",
     "$$\\label{hydro_speed}$$\n",
     "\n",
-    "Next, we will find the speeds at which the hydrodynamics waves propagate. We start from the speed of light (since FFE deals with very diffuse plasmas), which is $c=1.0$ in our chosen units. We then find the speeds $c_+$ and $c_-$ on each face with the function `find_cp_cm` **(TODO: IN PROGRESS)**; then, we find minimum and maximum speeds possible from among those.\n",
+    "Next, we will find the speeds at which the hydrodynamics waves propagate. We start from the speed of light (since FFE deals with very diffuse plasmas), which is $c=1.0$ in our chosen units. We then find the speeds $c_+$ and $c_-$ on each face with the function `find_cp_cm`; then, we find minimum and maximum speeds possible from among those.\n",
     "\n",
     "Below is the source code for `find_cp_cm`:\n",
     "\n",
@@ -507,11 +515,9 @@
     "  }\n",
     "}\n",
     "```\n",
-    "Comments documenting this have been excised for brevity, but are reproduced in $\\LaTeX$ below:\n",
+    "Comments documenting this have been excised for brevity, but are reproduced in $\\LaTeX$ [below](#derive_speed).\n",
     "\n",
-    "This computes phase speeds in the direction given by flux_dirn. Note that we replace the full dispersion relation with a simpler one, which overestimates the maximum speeds by a factor of ~2. See full discussion around Eqs. 49 and 50 in [Duez, et al.](http://arxiv.org/pdf/astro-ph/0503420.pdf). In summary, we solve the dispersion relation (in, e.g., the $x$-direction) with a wave vector of $k_\\mu = (-\\omega,k_x,0,0)$. So, we solve the approximate dispersion relation $\\omega_{\\rm cm}^2 = [v_A^2 + c_s^2 (1-v_A^2)]k_{\\rm cm}^2$ for the wave speed $\\omega/k_x$, where the sound speed $c_s = \\sqrt{\\Gamma P/(h \\rho_0)}$, the Alfv&eacute;n speed $v_A = 1$ (in GRFFE), $\\omega_{\\rm cm} = -k_\\mu k^\\mu$ is the frequency in the comoving frame, $k_{\\rm cm}^2 = K_\\mu K^\\mu$ is the wavenumber squared in the comoving frame, and $K_\\mu = (g_{\\mu\\nu} + u_\\mu u_\\nu)k^\\nu$ is the part of the wave vector normal to the four-velocity $u^\\mu$. See below for a complete derivation.\n",
-    "\n",
-    "~~We will only edit the function slightly, since it is already well-optimized.~~ One edit we need to make in particular is to the term `psim4*gupii` in `c`; that was written assuming the use of the conformal metric $\\tilde{g}^{ii}$. Since we are not using that here, and are instead using the ADM metric, we should not multiply by $\\psi^{-4}$.\n",
+    "What follows here is an edited version adapted to the NRPy+ version of GiRaFFE. One edit we need to make in particular is to the term `psim4*gupii` in the definition of `c`; that was written assuming the use of the conformal metric $\\tilde{g}^{ii}$. Since we are not using that here, and are instead using the ADM metric, we should not multiply by $\\psi^{-4}$.\n",
     "\n",
     "```c\n",
     "static inline void find_cp_cm(REAL &cplus,REAL &cminus,const REAL v02,const REAL u0,\n",
@@ -541,8 +547,7 @@
     "  }\n",
     "}\n",
     "```\n",
-    "~~Now we can paste this to the beginning of our string.~~\n",
-    "Note the `if` statement; this can be eliminated if we rewrite this like so:\n",
+    "But there's substantial improvement we can make by changing the the code into a NRPyfied form. Note the `if` statement; NRPy+ does not know how to handle them, so we must eliminate it if we want to leverage NRPy+'s full power. (Calls to `fabs()` are also cheaper than `if` statements.) This can be done if we rewrite this like so:\n",
     "```c\n",
     "  cp = 0.5*(detm-b)/a;\n",
     "  cm = -0.5*(detm+b)/a;\n",
@@ -554,14 +559,18 @@
     "  cplus  = 0.5*(-b/a + fabs(detm/a));\n",
     "  cminus = 0.5*(-b/a - fabs(detm/a));\n",
     "```\n",
-    "This leaves us with an expression that can be much more easily NRPyfied. So, we will rewrite the following in NRPy+, making only minimal changes to be proper Python. However, it turns out that we can make this even simpler. In GRFFE, $v_0^2$ is guaranteed to be exactly one. In GRMHD, this speed was calculated as $$v_{0}^{2} = v_{\\rm A}^{2} + c_{\\rm s}^{2}\\left(1-v_{\\rm A}^{2}\\right),$$ where the Alfv&eacute;n speed $v_{\\rm A}^{2}$ $$v_{\\rm A}^{2} = \\frac{b^{2}}{\\rho_{b}h + b^{2}}.$$ So, we can see that when the density $\\rho_b$ goes to zero, $v_{0}^{2} = v_{\\rm A}^{2} = 1$. Then $$a = (u^0)^2 (1-v_0^2) + v_0^2/\\alpha^2 = 1/\\alpha^2$$ is guaranteed to be positive; likewise, \n",
+    "This fulfills the original purpose of the `if` statement in the original code because we have guaranteed that $c_+ \\geq c_-$.\n",
+    "\n",
+    "This leaves us with an expression that can be much more easily NRPyfied. So, we will rewrite the following in NRPy+, making only minimal changes to be proper Python. However, it turns out that we can make this even simpler. In GRFFE, $v_0^2$ is guaranteed to be exactly one. In GRMHD, this speed was calculated as $$v_{0}^{2} = v_{\\rm A}^{2} + c_{\\rm s}^{2}\\left(1-v_{\\rm A}^{2}\\right),$$ where the Alfv&eacute;n speed $v_{\\rm A}^{2}$ $$v_{\\rm A}^{2} = \\frac{b^{2}}{\\rho_{b}h + b^{2}}.$$ So, we can see that when the density $\\rho_b$ goes to zero, $v_{0}^{2} = v_{\\rm A}^{2} = 1$. Then \n",
     "\\begin{align}\n",
+    "a &= (u^0)^2 (1-v_0^2) + v_0^2/\\alpha^2 \\\\\n",
+    "&= 1/\\alpha^2 \\\\\n",
     "b &= 2 \\left(\\beta^i v_0^2 / \\alpha^2 - (u^0)^2 v^i (1-v_0^2)\\right) \\\\\n",
     "&= 2 \\beta^i / \\alpha^2 \\\\\n",
-    "{\\rm and\\ }c &= (u^0)^2 (v^i)^2 (1-v_0^2) - v_0^2 \\left(g^{ii} - (\\beta^i)^2/\\alpha^2\\right) \\\\\n",
+    "c &= (u^0)^2 (v^i)^2 (1-v_0^2) - v_0^2 \\left(g^{ii} - (\\beta^i)^2/\\alpha^2\\right) \\\\\n",
     "&= g^{ii} - (\\beta^i)^2/\\alpha^2,\n",
     "\\end{align}\n",
-    "are simplifications that should save us some time. Note that we also guarantee that we force `detm` to be positive. Thus, `detm/a` is guaranteed to be positive itself, rendering the calls to `sp.Abs()` superfluous. Furthermore, we eliminate any dependence on the Valencia 3-velocity and the time compoenent of the four-velocity, $u^0$."
+    "are simplifications that should save us some time; we can see that $a \\geq 0$ is guaranteed. Note that we also force `detm` to be positive. Thus, `detm/a` is guaranteed to be positive itself, rendering the calls to `sp.Abs()` superfluous. Furthermore, we eliminate any dependence on the Valencia 3-velocity and the time compoenent of the four-velocity, $u^0$. This leaves us free to solve the quadratic in the familiar way: $$c_\\pm = \\frac{-b \\pm \\sqrt{b^2-4ac}}{2a}$$."
    ]
   },
   {
@@ -573,10 +582,9 @@
    "outputs": [],
    "source": [
     "# We'll write this as a function so that we can calculate the expressions on-demand for any choice of i\n",
-    "def find_cp_cm(lapse,shifti,gammadet,gupii):\n",
+    "def find_cp_cm(lapse,shifti,gupii):\n",
     "    # Inputs:  u0,vi,lapse,shift,gammadet,gupii\n",
     "    # Outputs: cplus,cminus \n",
-    "    psim4 = gammadet**sp.Rational(1,3)\n",
     "    a = 1/(lapse*lapse)\n",
     "    b = 2 * shifti /(lapse*lapse)\n",
     "    c = - gupii + shifti*shifti/(lapse*lapse)\n",
@@ -629,7 +637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below is the code that the old `GiRaFFE` used to call that function; we will write a similar function in NRPy+, allowing us to generate the expressions with less need to copy-and-paste code. Notice that since we eliminated the dependence on velocities, none of the input quantities are different on either side of the face. So, this function won't really do much besides guarantee that `cmax` and `cmin` are non-negative, but we'll leave the machinery here since it is likely to be a useful guide to somebody who wants to something similar."
+    "Below is the code that the old `GiRaFFE` used to call that function; we will write a similar function in NRPy+, allowing us to generate the expressions with less need to copy-and-paste code. Notice that since we eliminated the dependence on velocities, none of the input quantities are different on either side of the face. So, this function won't really do much besides guarantee that `cmax` and `cmin` are positive and negative, respectively, but we'll leave the machinery here since it is likely to be a useful guide to somebody who wants to something similar. We use the same technique as above to replace the `if` statements inherent to the `MAX()` and `MIN()` functions."
    ]
   },
   {
@@ -661,8 +669,8 @@
     "# We'll write this as a function, and call it within HLLE_solver, below.\n",
     "def find_cmax_cmin(flux_dirn,gamma_faceUU,beta_faceU,alpha_face,gammadet_face):\n",
     "    # First, we need to find the characteristic speeds on each face\n",
-    "    cpr,cmr = find_cp_cm(alpha_face,beta_faceU[flux_dirn],gammadet_face,gamma_faceUU[flux_dirn][flux_dirn])\n",
-    "    cpl,cml = find_cp_cm(alpha_face,beta_faceU[flux_dirn],gammadet_face,gamma_faceUU[flux_dirn][flux_dirn])\n",
+    "    cpr,cmr = find_cp_cm(alpha_face,beta_faceU[flux_dirn],gamma_faceUU[flux_dirn][flux_dirn])\n",
+    "    cpl,cml = find_cp_cm(alpha_face,beta_faceU[flux_dirn],gamma_faceUU[flux_dirn][flux_dirn])\n",
     "    \n",
     "    # The following algorithms have been verified with random floats\n",
     "    # Now, we need to set cmax to the larger of cpr,cpl, and 0\n",
@@ -992,6 +1000,9 @@
     "\n",
     "# Step 3: Complete Derivation of the Wave Speeds \\[Back to [top](#toc)\\]\n",
     "$$\\label{derive_speed}$$\n",
+    "\n",
+    "This computes phase speeds in the direction given by flux_dirn. Note that we replace the full dispersion relation with a simpler one, which overestimates the maximum speeds by a factor of ~2. See full discussion around Eqs. 49 and 50 in [Duez, et al.](http://arxiv.org/pdf/astro-ph/0503420.pdf). In summary, we solve the dispersion relation (in, e.g., the $x$-direction) with a wave vector of $k_\\mu = (-\\omega,k_x,0,0)$. So, we solve the approximate dispersion relation $\\omega_{\\rm cm}^2 = [v_A^2 + c_s^2 (1-v_A^2)]k_{\\rm cm}^2$ for the wave speed $\\omega/k_x$, where the sound speed $c_s = \\sqrt{\\Gamma P/(h \\rho_0)}$, the Alfv&eacute;n speed $v_A = 1$ (in GRFFE), $\\omega_{\\rm cm} = -k_\\mu k^\\mu$ is the frequency in the comoving frame, $k_{\\rm cm}^2 = K_\\mu K^\\mu$ is the wavenumber squared in the comoving frame, and $K_\\mu = (g_{\\mu\\nu} + u_\\mu u_\\nu)k^\\nu$ is the part of the wave vector normal to the four-velocity $u^\\mu$. See below for a complete derivation.\n",
+    "\n",
     "What follows is a complete derivation of the quadratic we solve.\n",
     "\\begin{align}\n",
     "w_{\\rm cm} &= (-k_0 u^0 - k_x u^x) \\\\\n",
