--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Configuration_files.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Configuration_files.ipynb
@@ -839,13 +839,13 @@
     "# We try it here in a couple of ways in an attempt to keep\n",
     "# the code more portable\n",
     "try:\n",
-    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "    # Write down the file the original IllinoisGRMHD source code\n",
     "    with open(original_IGM_file_path,\"w\") as file:\n",
     "        file.write(original_IGM_file_code)\n",
     "except:\n",
     "    try:\n",
-    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "        # Write down the file the original IllinoisGRMHD source code\n",
     "        with open(original_IGM_file_path,\"w\") as file:\n",
     "            file.write(original_IGM_file_code)\n",
@@ -911,13 +911,13 @@
     "# We try it here in a couple of ways in an attempt to keep\n",
     "# the code more portable\n",
     "try:\n",
-    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "    # Write down the file the original IllinoisGRMHD source code\n",
     "    with open(original_IGM_file_path,\"w\") as file:\n",
     "        file.write(original_IGM_file_code)\n",
     "except:\n",
     "    try:\n",
-    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "        # Write down the file the original IllinoisGRMHD source code\n",
     "        with open(original_IGM_file_path,\"w\") as file:\n",
     "            file.write(original_IGM_file_code)\n",
@@ -1002,13 +1002,13 @@
     "# We try it here in a couple of ways in an attempt to keep\n",
     "# the code more portable\n",
     "try:\n",
-    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "    # Write down the file the original IllinoisGRMHD source code\n",
     "    with open(original_IGM_file_path,\"w\") as file:\n",
     "        file.write(original_IGM_file_code)\n",
     "except:\n",
     "    try:\n",
-    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "        # Write down the file the original IllinoisGRMHD source code\n",
     "        with open(original_IGM_file_path,\"w\") as file:\n",
     "            file.write(original_IGM_file_code)\n",
@@ -1105,13 +1105,13 @@
     "# We try it here in a couple of ways in an attempt to keep\n",
     "# the code more portable\n",
     "try:\n",
-    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "    # Write down the file the original IllinoisGRMHD source code\n",
     "    with open(original_IGM_file_path,\"w\") as file:\n",
     "        file.write(original_IGM_file_code)\n",
     "except:\n",
     "    try:\n",
-    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "        # Write down the file the original IllinoisGRMHD source code\n",
     "        with open(original_IGM_file_path,\"w\") as file:\n",
     "            file.write(original_IGM_file_code)\n",
@@ -1180,13 +1180,13 @@
     "# We try it here in a couple of ways in an attempt to keep\n",
     "# the code more portable\n",
     "try:\n",
-    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "    # Write down the file the original IllinoisGRMHD source code\n",
     "    with open(original_IGM_file_path,\"w\") as file:\n",
     "        file.write(original_IGM_file_code)\n",
     "except:\n",
     "    try:\n",
-    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "        # Write down the file the original IllinoisGRMHD source code\n",
     "        with open(original_IGM_file_path,\"w\") as file:\n",
     "            file.write(original_IGM_file_code)\n",
@@ -1252,13 +1252,13 @@
     "# We try it here in a couple of ways in an attempt to keep\n",
     "# the code more portable\n",
     "try:\n",
-    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "    # Write down the file the original IllinoisGRMHD source code\n",
     "    with open(original_IGM_file_path,\"w\") as file:\n",
     "        file.write(original_IGM_file_code)\n",
     "except:\n",
     "    try:\n",
-    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
+    "        original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read().decode(\"utf-8\")\n",
     "        # Write down the file the original IllinoisGRMHD source code\n",
     "        with open(original_IGM_file_path,\"w\") as file:\n",
     "            file.write(original_IGM_file_code)\n",
